# musicclassifier

./: .gitignore  README.md  config.example.yaml  pyproject.toml  run.bat  tmp_probe_wechat_login.py
src/musicclassifier/: __init__.py  __main__.py  cli.py  config.py
src/musicclassifier/api/: __init__.py  qq_music.py
src/musicclassifier/auth/: __init__.py  qq_login.py  session.py
src/musicclassifier/models/: song.py
src/musicclassifier/processors/: classifier.py  dedup.py  exporter.py
src/musicclassifier/ui/: app.py
src/musicclassifier/utils/: helpers.py
tests/: test_classifier.py  test_dedup.py  test_helpers.py  test_models.py
